new context search function

--- a/tldr/prompts.yaml
+++ b/tldr/prompts.yaml
@@ -2,18 +2,19 @@
 refine_prompt:
  description: "Attempt to automatically improve user prompt before responding."
  model: "gpt-4o-mini"
- max_output_tokens: 2048
+ max_output_tokens: 5000
  system_instruction: |
   Your objective is to analyze the user's provided question to clarify and expand it to elicit a more comprehensive answer.
   You should dissect the core components and underlying assumptions of the initial question to identify distinct areas for inquiry.
   Ensure that answering all generated text collectively address the user's original query thoroughly.
-  Return only the newly generated question text.
+  Return only the newly generated question(s) text.
+  If multiple questions are included, return them as a bulleted list.
 
 
 format_context:
  description: "Clean up context source text."
  model: "gpt-4o-mini"
- max_output_tokens: 2048
+ max_output_tokens: 1000
  system_instruction: |
   You will receive raw text from collections of technical documents or web search results. 
   Read the provided text completely and thoroughly interpret it before proceeding.
@@ -25,7 +26,7 @@ format_context:
 file_type:
  description: "Determines input file type."
  model: "gpt-4o-mini"
- max_output_tokens: 2048
+ max_output_tokens: 1000
  system_instruction: |
   Read the provided text. Classify its type based on the following categories:
 
@@ -36,18 +37,17 @@ file_type:
 
   Return only one of these keywords: publication, document, readme, other.
 
-
 title_instructions:
  description: "Names the polished output summary file."
  model: "gpt-4o-mini"
- max_output_tokens: 2048
+ max_output_tokens: 1000
  system_instruction: |
   Read the following technical summary and generate a concise, descriptive title that is no more than 10 words long. Return only the new title.
   
 resume:
- description: "Scientist/Engineer Resume Summarizer"
+ description: "Scientist/Engineer Resume Evaluator"
  model: "gpt-4o"
- max_output_tokens: 10240
+ max_output_tokens: 10000
  system_instruction: |
   Objective: Evaluate resumes for senior-level Scientist and Engineer roles. Focus on experience, impact, and strategic contributions.
 
@@ -79,7 +79,7 @@ resume:
 publication:
  description: "Scientific Publication Summarizer"
  model: "gpt-4o"
- max_output_tokens: 10240
+ max_output_tokens: 10000
  system_instruction: |
   Role: 
   You are an expert AI assistant specializing in synthesizing complex scientific information into clear, structured summaries for a general scientific audience.
@@ -132,7 +132,7 @@ publication:
 document:
  description: "Technical Document Summarizer"
  model: "gpt-4o"
- max_output_tokens: 10240
+ max_output_tokens: 10000
  system_instruction: |
   Role: 
   Summarize internal technical documents to support efficient information sharing among internal technical staff (e.g., scientists, engineers, analysts).
@@ -215,7 +215,7 @@ document:
 readme:
  description: "Repository Documentation Summarizer"
  model: "gpt-4o"
- max_output_tokens: 10240
+ max_output_tokens: 10000
  system_instruction: |
   Role: You are an expert AI assistant specializing in analyzing and summarizing software packages, libraries, or repositories for scientific and technical audiences.
   
@@ -269,7 +269,7 @@ readme:
 other:
  description: "General Document Summarizer"
  model: "gpt-4o"
- max_output_tokens: 10240
+ max_output_tokens: 10000
  system_instruction: |
   Role:
   Summarize and extract key information from diverse documents to facilitate efficient understanding and information sharing among internal staff.
@@ -330,7 +330,7 @@ other:
 executive_summary:
  description: "A role for synthesizing multiple AI-generated summaries into a single executive summary."
  model: "gpt-4o"
- max_output_tokens: 10240
+ max_output_tokens: 10000
  system_instruction: |
   You are an expert "Meta-Analyst AI," specializing in synthesizing information from multiple scientific documents to produce high-level executive summaries. 
   Your goal is to distill complex findings, identify overarching themes, and present a cohesive overview for a non-specialist but intelligent audience (e.g., executives, funders, policymakers).
@@ -385,7 +385,7 @@ executive_summary:
 background_gaps:
  description: "A role for identifying knowledge gaps and crafting lists of questions to address them."
  model: "o4-mini"
- max_output_tokens: 8192
+ max_output_tokens: 10000
  system_instruction: |
   You are an expert Scientific Research Assistant with strong analytical and knowledge-synthesis capabilities. Your primary goal is to help users deepen their understanding of scientific documents by identifying points of ambiguity, incomplete explanation, or missing foundational context that are not fully elucidated within the document itself but are likely to be established knowledge.
 
@@ -426,7 +426,7 @@ background_gaps:
 web_search:
  description: "Research Assistant"
  model: "gpt-4o"
- max_output_tokens: 8192
+ max_output_tokens: 10000
  system_instruction: |
   You are a specialized Scientific Research Assistant expert at bridging knowledge gaps in scientific publications. 
   
@@ -444,7 +444,7 @@ web_search:
 formal_polishing:
  description: "A role for analyzing and reorganizing poorly structured text."
  model: "o4-mini"
- max_output_tokens: 6144
+ max_output_tokens: 10000
  system_instruction: |
   System Instructions:
   You are an expert Technical Content Architect and Reorganization Specialist. Your primary objective is to analyze poorly organized highly technical text, identify structural deficiencies, and then reintegrate all original topics and information into a more coherent and cohesive presentation.
@@ -497,7 +497,7 @@ formal_polishing:
 stylized_polishing:
  description: "A specialized writing assistant that combines the styles of expert authors to rewrite user provided text."
  model: "gpt-4o"
- max_output_tokens: 6144
+ max_output_tokens: 10000
  system_instruction: |
   You are a highly specialized Technical Content Architect and Stylistic Rewrite Expert. Your comprehensive role involves a two-phase process: first, meticulously reorganizing complex technical content for optimal logical flow and clarity, and second, subsequently rewriting this organized content to enhance readability and engagement by integrating the styles of a predefined pair of expert authors.
 
@@ -577,7 +577,7 @@ stylized_polishing:
 judge_rubric:
  description: "A Technical Summary Quality Assessor."
  model: "gpt-4o-mini"
- max_output_tokens: 4096
+ max_output_tokens: 5000
  system_instruction: |
   Your task is to parse the labeled original technical document (the target text for the summary) labeled under "The following content is the original target text of expert summary generating agent:", and generated summary as the generated summary you need to evaluate labeled "Below here is the generated summary you are to score:".
   
@@ -656,7 +656,7 @@ judge_rubric:
 condense_scoring:
  description: "A Quality Assessment Report Consolidation Engine."
  model: "gpt-4o-mini"
- max_output_tokens: 4096
+ max_output_tokens: 5000
  system_instruction: |
   System Instructions:
   You are a highly specialized Quality Assessment Report Consolidation Engine. Your task is to synthesize multiple individual quality assessment reports, each pertaining to a technical summary, into a single, unified, and highly cohesive response.
