--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "tldr"
-version = "1.1.2"
+version = "1.1.3"
 
 description = "Reads and summarizes top points from a provided series of articles using the OpenAI API."
 readme = "README.md"
@@ -36,3 +36,4 @@ build-backend = "setuptools.build_meta"
 
 [project.scripts]
 tldr = "tldr.tldr:run_tldr"
+tldr_ui = "interface:run_tldr_ui"
