--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ dependencies = [
     "faiss-cpu>=1.7.4",
     "tenacity>=8.2.3",
     "langchain-google-genai>=0.1.1",
+    "google-genai>=0.1.1",
 ]
 
 [project.urls]
