--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,6 +1,5 @@
 [bumpversion]
-current_version = 1.0.32
-
+current_version = 1.0.34
 commit = True
 tag = True
 tag_name = v{new_version}
@@ -25,3 +24,7 @@ replace = version = "{new_version}"
 [bumpversion:file:tldr/__init__.py]
 search = __version__ = "{current_version}"
 replace = __version__ = "{new_version}"
+
+[bumpversion:streamlit.py]
+search = version = "{current_version}"
+replace = version = "{new_version}"
