--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,5 +35,4 @@ requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project.scripts]
-tldr = "tldr.tldr:run_tldr"
-tldr_ui = "tldr.streamlit:start_tldr_ui"
+tldr = "tldr.cli:run_tldr"
