--- a/pixi.toml
+++ b/pixi.toml
@@ -13,6 +13,7 @@ langchain = "*"
 langchain-openai = "*"
 langchain-google-genai = "*"
 langchain-community = "*"
+xclip = "*"
 
 [pypi-dependencies]
 openai = ">=1.78.1"
@@ -31,3 +32,4 @@ numpy = "*"
 deepeval = "*"
 streamlit = "*"
 tenacity = "*"
+pyperclip = "*"
