--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "openai>=1.78.1",
     "python-docx>=1.0.0",
     "pypdf2>=2.0.0",
+    "pyperclip>=1.9.0",
     "beautifulsoup4>=4.12.2",
     "pillow>=10.2.0",
     "pyyaml>=6.0.1",
